<resources>
    <string name="app_name">RAE</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="full_name">Nome Completo</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="periodo">Periodo:</string>
    <string name="dots">...</string>
    <string name="serie">Série:</string>
    <string name="curso">Curso:</string>
    <string name="signup">Cadastrar-se</string>
    <string name="admin_signup">Cadastre uma conta de administrador.</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>
    <string name="admin_signup_warning">OBS: Você precisa ter uma conta de administrador para prosseguir.</string>
    <string name="cadastro">Cadastro</string>
    <string name="image">Image</string>
    <string name="edit">Editar</string>
    <string name="title">Título</string>
    <string name="aviso">Aviso</string>
    <string name="update">Update</string>
    <string name="exclusive">Aviso para sala especifica?</string>
    <string name="send">Enviar</string>
    <string name="day">Dia:</string>
    <string name="loading">Carregando...</string>
    <string name="saving">Salvando...</string>
    <string name="themeswitch">themeSwitch</string>
    <string name="voltar">Voltar</string>
    <string name="next">Próxima</string>

    <string-array name="periodos">
        <item>Manhã</item>
        <item>Tarde</item>
        <item>Noite</item>
    </string-array>

    <string-array name="series">
        <item>1º Ano</item>
        <item>2º Ano</item>
        <item>3º Ano</item>
    </string-array>

    <string-array name="cursos">
        <item>IPIA</item>
        <item>MEC</item>
        <item>MECA</item>
        <item>DS</item>
        <item>ADM</item>
        <item>MEIO</item>
        <item>LOG</item>
        <item>ELECTRO</item>
    </string-array>

    <string-array name="time">
        <item>07:10</item>
        <item>08:00</item>
        <item>08:50</item>
        <item>10:10</item>
        <item>11:00</item>
        <item>11:50</item>
    </string-array>

    <string-array name="dias">
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
    </string-array>


</resources>