<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.AdminCheckActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/accent_color"
        android:textSize="80sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/admin_signup_warning"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/email"
        android:paddingBottom="5dp"
        android:textColorHint="@color/grey"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/accent_color"
        app:startIconDrawable="@drawable/ic_email_24"
        app:startIconTint="@color/accent_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/check_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:textColor="@color/text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/senha"
        android:minEms="8"
        android:paddingBottom="5dp"
        android:textColorHint="@color/grey"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/accent_color"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/accent_color"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:startIconTint="@color/accent_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/check_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/accent_color"
        android:text="@string/login"
        android:textSize="18sp"
        app:cornerRadius="30dp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/accent_color"
        android:textSize="15sp"
        android:textStyle="italic" />

</LinearLayout>