<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".data.UploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aviso"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/uploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_cloud_upload_24" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/title"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/teal_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uploadTitulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/aviso"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/teal_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uploadAviso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/exclusive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/teal_200"
            android:onClick="itemClicked"
            android:text="@string/exclusive"
            android:textColor="@color/text" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/arrays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/periodo"
                    android:padding="5dp"
                    android:textColorHint="@color/grey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/teal_200"
                    app:startIconDrawable="@drawable/ic_serie_24"
                    app:startIconTint="@color/teal_200">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/uploadPeriodo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/dots"
                        android:inputType="none"
                        android:textColor="@color/text"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/serie"
                    android:padding="5dp"
                    android:textColorHint="@color/grey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/teal_200"
                    app:startIconDrawable="@drawable/ic_serie_24"
                    app:startIconTint="@color/teal_200">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/uploadSerie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/dots"
                        android:inputType="none"
                        android:textColor="@color/text"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/curso"
                    android:padding="5dp"
                    android:textColorHint="@color/grey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/teal_200"
                    app:startIconDrawable="@drawable/ic_cursos_24"
                    app:startIconTint="@color/teal_200">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/uploadCurso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/dots"
                        android:inputType="none"
                        android:textColor="@color/text"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/send"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

    </LinearLayout>

</ScrollView>